--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="content-type" content="text/html">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover"/>
+
   <meta name="description" content="vue-h5-template">
   <meta name="format-detection" content="telephone=no,date=no,address=no,email=no,url=no"/>
   <!-- uc 浏览器字体不放大 -->
@@ -22,10 +23,8 @@
   <link rel="shortcut icon" href="favicon.jpg">
   <link rel="icon" href="favicon.jpg">
 
-  <!--<script src="http://172.16.185.185:8081/target/target-script-min.js#anonymous"></script>-->
 </head>
 <body>
-<div style="display:none;"><img src="./favicon.jpg" alt=""></div>
 <div id="app"></div>
 <script>
   // 获取当前环境
